--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router": "^3.2.6",
+    "react-scripts": "3.4.1",
+    "router": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
