--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "copy-to-clipboard": "^3.3.1",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router": "^3.2.6",
     "react-scripts": "3.4.1",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
